Refactor code structure for improved readability and maintainability

--- a/static/index.html
+++ b/static/index.html
@@ -155,7 +155,7 @@ Registros: <b id="point-count">0</b>
 <div id="loading"><i class="fas fa-spinner fa-spin"></i> Cargando...</div>
 
 <script>
-const API='http://localhost:8000';
+const API_BASE = 'https://conectividad-produccion.onrender.com';
 let deckgl;
 
 /* ====================== MAPA ====================== */
